--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,32 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="88"
+    android:viewportHeight="88">
+  <group android:scaleX="0.66"
+      android:scaleY="0.66"
+      android:translateX="14.96"
+      android:translateY="14.96">
+    <group>
+      <clip-path
+          android:pathData="M0,0h88v88h-88z"/>
+      <path
+          android:pathData="M67.529,0H20.471C9.165,0 0,9.165 0,20.471V67.529C0,78.835 9.165,88 20.471,88H67.529C78.835,88 88,78.835 88,67.529V20.471C88,9.165 78.835,0 67.529,0Z"
+          android:fillColor="#24282D"/>
+      <path
+          android:pathData="M24,49.424L58.208,31.414L66.667,38.569L32.458,56.579L24,49.424Z"
+          android:fillColor="#265FFF"/>
+      <path
+          android:pathData="M66.665,66.75L24.822,60.3L24.049,49.422L65.867,55.871L66.665,66.75Z"
+          android:fillColor="#265FFF"/>
+      <path
+          android:pathData="M66.665,38.57L24.822,32.145L24.049,21.242L65.867,27.691L66.665,38.57Z"
+          android:fillColor="#ffffff"/>
+      <path
+          android:pathData="M49.6,35.945L53.742,45.388L66.666,38.574L49.6,35.945Z"
+          android:strokeAlpha="0.51"
+          android:fillColor="#1A4BD1"
+          android:fillAlpha="0.51"/>
+    </group>
+  </group>
 </vector>
